--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,45 @@
-
 buildscript {
     repositories {
-        mavenCentral()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
+        jcenter()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+    }
+}
+
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
 
 
 apply plugin: 'com.android.library'
 
+
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 26
+        minSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
-        versionName "0.1"
+        versionName "1.0"
     }
-    buildTypes {
-        debug {
-            minifyEnabled false
-            useProguard false
-        }
 
-        release {
-            minifyEnabled false
-            useProguard false
+    libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${project.name}-${variant.name}-${defaultConfig.versionName}.aar"
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 task javadoc(type: Javadoc) {
@@ -52,17 +51,19 @@ task javadoc(type: Javadoc) {
     exclude '**/R.java'
 }
 
-def fabric_view_destination = ""
 
-task copyAar(dependsOn: "assembleDebug") {
 
-    //Add this to your local.properties file:
-    //fabric_view_destination=/other/project/folder/libs
-
-    Properties properties = new Properties()
-    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-    fabric_view_destination = properties.getProperty('fabric_view_destination')
-    println 'fabric_view_destination=' + fabric_view_destination
-
-    ant.copy(file: 'build/outputs/aar/' + project.name + '-debug.aar', todir: fabric_view_destination)
-}
+//def fabric_view_destination = ""
+//
+//task copyAar(dependsOn: "assembleDebug") {
+//
+//    //Add this to your local.properties file:
+//    //fabric_view_destination=/other/project/folder/libs
+//
+//    Properties properties = new Properties()
+//    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+//    fabric_view_destination = properties.getProperty('fabric_view_destination')
+//    println 'fabric_view_destination=' + fabric_view_destination
+//
+//    ant.copy(file: 'build/outputs/aar/' + project.name + '-debug.aar', todir: fabric_view_destination)
+//}
